manifests/deployments/mmo-client-forest-production/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dd-cyberia-mmo-client-forest-production-blue
  namespace: default
  labels:
    app: dd-cyberia-mmo-client-forest-production-blue
    deploy-id: dd-cyberia-mmo-client-forest-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dd-cyberia-mmo-client-forest-production-blue
  template:
    metadata:
      labels:
        app: dd-cyberia-mmo-client-forest-production-blue
        deploy-id: dd-cyberia-mmo-client-forest-production
    spec:
      containers:
        - name: dd-cyberia-mmo-client-forest-production-blue
          image: underpost/cyberia-client:v3.4.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8081

          command:
            - /bin/sh
            - -c
            - >
              set -a && . /home/dd/engine/engine-private/conf/dd-cyberia/instances/mmo-client-forest/env/production.env && set +a && exec python3 /home/dd/engine/cyberia-client/wasm-driver.py --port=8081 --directory=/home/dd/engine/cyberia-client/bin --data-server-url=$CYBERIA_DATA_SERVER_URL
          readinessProbe:
            {
              "tcpSocket": {
                "port": 8081
              },
              "initialDelaySeconds": 2,
              "periodSeconds": 5,
              "timeoutSeconds": 3,
              "failureThreshold": 6
            }
          livenessProbe:
            {
              "tcpSocket": {
                "port": 8081
              },
              "initialDelaySeconds": 30,
              "periodSeconds": 20,
              "timeoutSeconds": 5,
              "failureThreshold": 3
            }
          lifecycle:
            {
              "postStart": {
                "exec": {
                  "command": [
                    "sh",
                    "-c",
                    "underpost state set container-status dd-cyberia-mmo-client-forest-production-initializing-deployment || true"
                  ]
                }
              },
              "preStop": {
                "exec": {
                  "command": [
                    "sh",
                    "-c",
                    "underpost state set container-status dd-cyberia-mmo-client-forest-production-stopping-deployment || true"
                  ]
                }
              }
            }


    
          volumeMounts:
            - name: instance-cyberia-client-dd-cyberia-mmo-client-forest-p-38f37ef9
              mountPath: /home/dd/engine/engine-private/conf/dd-cyberia/instances/mmo-client-forest/env
    
      volumes:
        - name: instance-cyberia-client-dd-cyberia-mmo-client-forest-p-38f37ef9
          persistentVolumeClaim:
            claimName: instance-cyberia-client-dd-cyberia-mmo-client-forest-production-blue
    
      
---
apiVersion: v1
kind: Service
metadata:
  name: dd-cyberia-mmo-client-forest-production-blue-service
  namespace: default
spec:
  selector:
    app: dd-cyberia-mmo-client-forest-production-blue
  ports:
    - name: 'tcp-8081'
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: 'udp-8081'
      protocol: UDP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
