manifests/deployments/mmo-client-forest-production/httproute.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client.cyberiaonline.com
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dd-cyberia-production
      namespace: default
  hostnames:
    - client.cyberiaonline.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /FOREST/404
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /client.cyberiaonline.com/FOREST/status-pages/404
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /client.cyberiaonline.com/FOREST/status-pages/404/index.html
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /FOREST
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Alt-Svc
                value: 'h3=":443"; ma=86400'
      backendRefs:
        - name: underpost-gateway-service
          port: 80
          weight: 100
